Bug 157285 - digikam advanced slideshow not working with Canon RAWs
Summary: digikam advanced slideshow not working with Canon RAWs
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Generic-Presentation (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-02-06 20:48 UTC by Roman Fietze
Modified: 2018-03-23 11:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Fietze 2008-02-06 20:48:29 UTC
Version:           0.9.3-rc1 (using 3.5.8 "release 33.2" , openSUSE )
Compiler:          Target: i586-suse-linux
OS:                Linux (i686) release 2.6.22.16-0.2-default

Trying the advanced slideshow with Canon EOS 350D CR2 files won't work any more (it worked with previous versions). The slideshow (not advanced) reachable from the toolbar still works.

On the command line I get:

Warning: Directory Canon has an unhandled next pointer.
Warning: Size 5352 of Exif.Canon.0x4002 exceeds 4096 bytes limit. Not decoded.

Viewing CR2 files within digikam is no problem, so kdcraw seems to work properly (view with full load, edit), allthough the message above will show up as well.

This bug does not seem to be related to #132695.
Comment 1 Valerio Fuoglio 2008-11-04 21:35:44 UTC
SVN commit 880130 by vfuoglio:

Added RAW images support to SlideShow.

CCMAIL: kde-imaging@kde.org
BUG: 157285 



 M  +3 -1      NEWS  
 M  +1 -1      slideshow/CMakeLists.txt  
 M  +27 -3     slideshow/imageloadthread.cpp  
 M  +31 -12    slideshow/slideshowloader.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=880130
Comment 2 Valerio Fuoglio 2008-11-04 21:57:39 UTC
Until now, kipi-plugins' SlideShow never supported RAW images.

Now this feature is available in trunk (kde4 version).