Added RAW images support to SlideShow.

CCMAIL: kde-imaging@kde.org
BUG: 157285 


svn path=/trunk/extragear/graphics/kipi-plugins/; revision=880130